Fix bug with jumping footer

--- a/src/scenes/Account/Account.module.scss
+++ b/src/scenes/Account/Account.module.scss
@@ -7,7 +7,7 @@
 .accountPage {
 	width: 90vw;
 	max-width: 904px;
-	min-height: calc(100vh - 152px);
+	min-height: calc(100vh - 70px);
 	background-color: #fff;
 	align-self: center;
 	padding: 49px 0 20px 0;
